# ATEM-14251-

./: CONTRIBUTING.md  LICENSE  README.MD  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  dependency.yml  test_cov.yml  tests.yml
atem/: __init__.py  atem_interpreter.py  core.py  model_train.py  utils.py
atem_WIP/Java/: build.gradle
atem_core/: __init__.py
atem_core/adaptive/: __init__.py  adaptive_model.tflite  real_time_task_sequence.json  test_interp.py  train.py
atem_core/core/: __init__.py  interp_test.py  interpreted_task_order.json  task_gen.py  tasks.json  train.py
atem_core/core/models/: auto_task_optimizer.tflite
atem_core/models/: auto_task_optimizer.tflite
atem_core/tasks_data/ftc_24-25/: tasks.json
auto/src/: a_star.py  field_config.json  main.py  simulation.py
auto/src/auto_test/: movement_log.json
docs/: API_REF.md  DEV_SETUP.md
package/: __init__.py  core.py
tests/: test_model_train.py
