[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ATEM"
version = "1.0.0"
description = "Adaptive Task Execution Manager for robotics, integrating AI and pathfinding."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["FTC", "robotics", "AI", "pathfinding", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "tensorflow",
    "numpy",
    "matplotlib"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/ATEM"
Documentation = "https://github.com/yourusername/ATEM#readme"
